[package]
name = "chainlink-solana-demo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "chainlink_solana_demo"

[features]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]
no-log-ix-name = []
cpi = ["no-entrypoint"]
mainnet = []
testnet = []
devnet = []
localnet = []
default = ["localnet"]

[dependencies]
anchor-lang = "0.30.1"
chainlink_solana = "1.0.0"
solana-program = "1.10.25"

